# Fast-DDS

dds_gateway/: CMakeLists.txt  config.json
dds_gateway/include/gateway/: blocking_queue.h  config.h  dds_gateway.h  dds_input_adapter.h  gateway.h  input_adapter.h  json.h  manager.h  message.h  mqtt_output_adapter.h  output_adapter.h  pipeline.h  processor.h  router.h  tcp_output_adapter.h  thread_safe_queue.h
dds_gateway/src/: config.cpp  dds_gateway.cpp  dds_input_adapter.cpp  gateway.cpp  main.cpp  manager.cpp  mqtt_output_adapter.cpp  pipeline.cpp  processor.cpp  router.cpp  tcp_output_adapter.cpp
